// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H1 component should accept additional props 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <Text
      accessible={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Black",
          "fontSize": 43,
          "lineHeight": 49.45,
        }
      }
    >
      "Do all the good you can. By all the means you can. In all the ways you can. In all theplaces you can. At all the times you can. To all the people you can. As long as ever you can." ― John Wesley
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`the H1 component should accept and render passed in styles 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "salmon",
          "fontFamily": "InterUI-Black",
          "fontSize": 43,
          "lineHeight": 49.45,
        }
      }
    >
      Salmon text
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`the H1 component should render a loading state 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 43,
          "marginVertical": 3.2250000000000014,
          "width": "100%",
        }
      }
    />
  </View>
</RCTSafeAreaView>
`;

exports[`the H1 component should render a loading state with correct positioning (margins) 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 43,
          "marginVertical": 46.44,
          "width": "100%",
        }
      }
    />
  </View>
</RCTSafeAreaView>
`;

exports[`the H1 component should render correctly 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Black",
          "fontSize": 43,
          "lineHeight": 49.45,
        }
      }
    >
      Default H1 text
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`the H1 component should render with correct padding 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <Text
      padded={true}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Black",
          "fontSize": 43,
          "lineHeight": 49.45,
          "paddingVertical": 46.44,
        }
      }
    >
      Padded H1 text
    </Text>
  </View>
</RCTSafeAreaView>
`;
